--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -35,7 +35,7 @@
 .meta {
   margin: 0;
   max-width: 26ch;
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 0.5);
   font-size: 12px;
   line-height: 1.4;
   text-align: right;
